docs/assets/css/style.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import
  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
  "minima/initialize";

.site-title {
  white-space: break-spaces;
  font-size: 55px
}


img.group {
  width: 130px;
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 3px;
  margin-bottom: 3px;
}


img.affiliation {
  height: 100px;
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 10px;
  margin-bottom: 10px;
}


img.aidx {
  height: 140px;
  margin-left: 70px;
  margin-right: 50px;
  margin-top: 0px;
  margin-bottom: 50px;
}

.youtube-video {
    aspect-ratio: 16 / 9;  
    width: 100%;  
    height: auto;  
}

.member-details {
  display: inline-block;
}

